# Subtitle_ocr

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/subtitle_ocr/: __init__.py  config.py  models_downloader.py  pipeline.py  scanner.py  settings_store.py  srt_analyzer.py  types.py
src/subtitle_ocr_cli/: main.py
src/subtitle_ocr_gui/: app.py
src/subtitle_ocr_pro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tessdata_best/: README.txt
tests/: test_analyzer.py
tools/: check_line_lengths.py  find_long_lines.py
